--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@testing-library/user-event": "^13.5.0",
         "ajv": "^8.17.1",
         "ajv-keywords": "^5.1.0",
+        "framer-motion": "^12.23.16",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
         "react-scripts": "5.0.1",
@@ -30,7 +31,7 @@
         "production": [
             ">0.2%",
             "not dead",
-           "not op_mini all"
+            "not op_mini all"
         ],
         "development": [
             "last 1 chrome version",
